// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.ProgressBar should render correctly (50%) 1`] = `
<EmptyBar
  bg="tertiaryColor"
  height={10}
>
  <ProgressBar__FilledBar
    bg="primaryAccent"
    height={10}
    justify="left"
    width={0.5}
  />
</EmptyBar>
`;

exports[`component.UI.ProgressBar should render correctly (100%) 1`] = `
<EmptyBar
  bg="tertiaryColor"
  height={10}
>
  <ProgressBar__FilledBar
    bg="primaryAccent"
    height={10}
    justify="left"
    width={1}
  />
</EmptyBar>
`;

exports[`component.UI.ProgressBar should render correctly (blue) 1`] = `
<EmptyBar
  bg="tertiaryColor"
  height={10}
>
  <ProgressBar__FilledBar
    bg="superBlue"
    height={10}
    justify="left"
    width={0.5}
  />
</EmptyBar>
`;

exports[`component.UI.ProgressBar should render correctly (default) 1`] = `
<EmptyBar
  bg="tertiaryColor"
  height={10}
/>
`;

exports[`component.UI.ProgressBar should render correctly (right justify) 1`] = `
<EmptyBar
  bg="tertiaryColor"
  height={10}
>
  <ProgressBar__FilledBar
    bg="primaryAccent"
    height={10}
    justify="right"
    width={0.5}
  />
</EmptyBar>
`;
